--- a/package.json
+++ b/package.json
@@ -22,9 +22,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
-    "sass": "^1.55.0"
-  },
-  "devDependencies": {
+    "sass": "^1.55.0",
     "nodemon": "^2.0.20"
   }
 }
